tests/test_assets/semantic/invalid/expressions/bitwise_constant_oracles.expected
semantic error at line 29: duplicate switch case
semantic error at line 37: duplicate switch case
semantic error at line 45: duplicate switch case
semantic error at line 53: duplicate switch case
semantic error at line 61: duplicate switch case
semantic error at line 71: duplicate switch case
semantic error at line 81: duplicate switch case
7 semantic errors generated.
